<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/home_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!--    header-->
        <LinearLayout
            android:id="@+id/lll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:orientation="vertical">


            <!--        <include-->
            <!--            android:id="@+id/id_main_header"-->
            <!--            layout="@layout/include_header">-->

            <!--        </include>-->


            <!--search-->
            <include
                layout="@layout/search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="12sp"
                android:layout_marginRight="8sp"
                android:layout_marginBottom="12sp">

            </include>

        </LinearLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_anim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/ll_banner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <androidx.viewpager2.widget.ViewPager2
                            android:id="@+id/banner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"


                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">


                        </androidx.viewpager2.widget.ViewPager2>

                        <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                            android:id="@+id/banner_indicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            app:dotsColor="@color/white"
                            app:dotsCornerRadius="8dp"
                            app:dotsSize="10dp"
                            app:dotsSpacing="8dp"
                            app:dotsStrokeColor="@color/primary"

                            app:dotsStrokeWidth="1.7dp"

                            app:layout_constraintBottom_toBottomOf="@+id/banner"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <include
                        android:id="@+id/bt"
                        layout="@layout/include_three_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_recomend_products"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Title_Bold16"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:text="@string/txt_sales"


                        >

                    </TextView>

                    <androidx.recyclerview.widget.RecyclerView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/sales"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"

                    >

                    <TextView
                        android:id="@+id/textView"
                        style="@style/Title_Bold16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/txt_populars"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </TextView>

                    <TextView
                        android:id="@+id/populars_all_btn"
                        style="@style/Body_Regular14"
                        android:textColor="@color/primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="Все"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </TextView>

                    <androidx.recyclerview.widget.RecyclerView

                        android:id="@+id/populars"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="24dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView">

                    </androidx.recyclerview.widget.RecyclerView>



                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    style="@style/Title_Bold16"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"

                    android:layout_marginTop="40dp"


                    android:text="@string/txt_brands"

                    >

                </TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/brands"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="60sp"
                    android:orientation="horizontal">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/home_pb"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:theme="@style/LoadProducts"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    </ProgressBar>




</androidx.constraintlayout.widget.ConstraintLayout>






